prevent table overflow

--- a/main.css
+++ b/main.css
@@ -162,6 +162,10 @@ code {
 
 table {
     border-collapse: collapse;
+    overflow-x: hidden;
+    max-width: 100%;
+    height: 1000px;
+    display: block;
 }
 
 figcaption {
